--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         	</ul>
 
         	<span class="moves" id="moves">3</span> Moves
-
+            <span class="timer">
+                <span id="minutes">00</span>:
+                <span id="seconds">00</span>
+            </span>
             <div class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
