--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <span id="seconds">00</span>
             </span>
             <div class="restart">
-        		<i class="fa fa-repeat"></i>
+        		<i class="fa fa-repeat" id="reset"></i>
         	</div>
         </section>
 
