--- a/index.html
+++ b/index.html
@@ -17,24 +17,31 @@
         </header>
 
         <section class="score-panel">
-        	<ul class="stars">
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        	</ul>
+            <ul class="stars">
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+            </ul>
 
-        	<span class="moves" id="moves">3</span> Moves
+            <span class="moves" id="moves">3</span> Moves
             <span class="timer">
                 <span id="minutes">00</span>:
                 <span id="seconds">00</span>
             </span>
             <div class="restart">
-        		<i class="fa fa-repeat" id="reset"></i>
-        	</div>
+                <i class="fa fa-repeat" id="reset"></i>
+            </div>
         </section>
-
         <ul class="deck">
         </ul>
+          <div id="win" class="modal">
+                <div class="modal-content">
+                    <span class="close"><i class="fa fa-times-circle"></i></span>
+                    <h1>Congratulations! You have won the game!</h1>
+                    <p> Your time was <span id="final-time"></span>. You finished the game in <span id="final-moves"></span> moves.</p>
+                    <p> Your final score is <span id="final-stars"></span></p>
+                    <p>Would you like to play again? <button id="yes">YES!</button> <button id="no">No</button></p>
+                </div>
     </div>
 
     <script src="js/app.js"></script>
