--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Matching Game</title>
+    <title>Memory Match</title>
     <meta name="description" content="">
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
+    <link href="https://fonts.googleapis.com/css?family=Fontdiner+Swanky" rel="stylesheet">
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
 
     <div class="container">
         <header>
-            <h1>Matching Game</h1>
+            <h1>Memory Match</h1>
         </header>
 
         <section class="score-panel">
@@ -37,7 +38,8 @@
           <div id="win" class="modal">
                 <div class="modal-content">
                     <span class="close"><i class="fa fa-times-circle"></i></span>
-                    <h1>Congratulations! You have won the game!</h1>
+                    <h1>Congratulations!</h1>
+                    <p> You have won the game!</p>
                     <p> Your time was <span id="final-time"></span>. You finished the game in <span id="final-moves"></span> moves.</p>
                     <p> Your final score is <span id="final-stars"></span></p>
                     <p>Would you like to play again? <button id="yes">YES!</button> <button id="no">No</button></p>
