--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                 <div class="modal-content">
                     <span class="close"><i class="fa fa-times-circle"></i></span>
                     <h1>Congratulations!</h1>
-                    <p> You have won the game!</p>
-                    <p> Your time was <span id="final-time"></span>. You finished the game in <span id="final-moves"></span> moves.</p>
-                    <p> Your final score is <span id="final-stars"></span></p>
-                    <p>Would you like to play again? <button id="yes">YES!</button> <button id="no">No</button></p>
+                    <p> You have won the game! Your time was <span id="final-time"></span>.</p>
+                    <p> You finished the game in <span id="final-moves"></span> moves, with a score of <span id="final-stars"></span></p>
+                    <p class="play-again">Would you like to play again?</p>
+                    <p class="play-again"><button id="yes"><i class="fa fa-check"></i></button> <button id="no"><i class="fa fa-times"></i></button></p>
                 </div>
     </div>
 
