--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Memory Match</title>
     <meta name="description" content="">
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
@@ -11,19 +12,16 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-
     <div class="container">
         <header>
             <h1>Memory Match</h1>
         </header>
-
         <section class="score-panel">
             <ul class="stars">
                 <li><i class="fa fa-star"></i></li>
                 <li><i class="fa fa-star"></i></li>
                 <li><i class="fa fa-star"></i></li>
             </ul>
-
             <span class="moves" id="moves">3</span> Moves
             <span class="timer">
                 <span id="minutes">00</span>:
@@ -35,17 +33,17 @@
         </section>
         <ul class="deck">
         </ul>
-          <div id="win" class="modal">
-                <div class="modal-content">
-                    <span class="close"><i class="fa fa-times-circle"></i></span>
-                    <h1>Congratulations!</h1>
-                    <p> You have won the game! Your time was <span id="final-time"></span>.</p>
-                    <p> You finished the game in <span id="final-moves"></span> moves, with a score of <span id="final-stars"></span></p>
-                    <p class="play-again">Would you like to play again?</p>
-                    <p class="play-again"><button id="yes"><i class="fa fa-check"></i></button> <button id="no"><i class="fa fa-times"></i></button></p>
-                </div>
+        <div id="win" class="modal">
+            <div class="modal-content">
+                <span class="close"><i class="fa fa-times-circle"></i></span>
+                <h1>Congratulations!</h1>
+                <p> You have won the game! Your time was <span id="final-time"></span>.</p>
+                <p> You finished the game in <span id="final-moves"></span> moves, with a score of <span id="final-stars"></span></p>
+                <p class="play-again">Would you like to play again?</p>
+                <p class="play-again"><button id="yes"><i class="fa fa-check"></i></button> <button id="no"><i class="fa fa-times"></i></button></p>
+            </div>
+        </div>
     </div>
-
     <script src="js/app.js"></script>
 </body>
 </html>
